--- a/notebook_testing/match_template_test.ipynb
+++ b/notebook_testing/match_template_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "b5fa9783-49b3-4c8c-b77a-ebf08873885b",
    "metadata": {},
    "outputs": [
@@ -32,73 +32,49 @@
     "\n",
     "class StartDetector:\n",
     "    def __init__(self, needle_img_name):\n",
-    "        # Get the absolute path of the current working directory\n",
     "        script_dir = os.getcwd()\n",
-    "        \n",
-    "        # Path to the needle image (template)\n",
     "        self.needle_img_path = os.path.join(script_dir, 'Start_Testing', needle_img_name)\n",
     "        self.needle_img = cv2.imread(self.needle_img_path, cv2.IMREAD_UNCHANGED)\n",
     "        assert self.needle_img is not None, f\"{self.needle_img_path} could not be read, check if it exists\"\n",
     "\n",
-    "        # Check if the image has an alpha channel (4th channel) and handle it\n",
     "        if self.needle_img.shape[2] == 4:\n",
-    "            # Convert the needle image from BGRA to BGR by ignoring the alpha channel\n",
     "            self.needle_img = self.needle_img[:, :, :3]\n",
     "\n",
-    "        # Convert the template image to grayscale\n",
     "        self.needle_img_gray = cv2.cvtColor(self.needle_img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "    def detect(self, frame):\n",
-    "        # Convert the frame to grayscale\n",
     "        frame_gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "        # Perform template matching\n",
     "        result = cv2.matchTemplate(frame_gray, self.needle_img_gray, cv2.TM_CCOEFF_NORMED)\n",
-    "\n",
-    "        # Get the min/max values and locations from the match result\n",
     "        min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(result)\n",
-    "\n",
-    "        # Return the confidence value (max_val) and the location of the best match (max_loc)\n",
-    "        return max_val, max_loc\n",
+    "        \n",
+    "        return max_val, max_loc  # Returning the confidence value and the location of the best match\n",
     "\n",
     "def find_matches_in_directory(directory_path, needle_img_name):\n",
-    "    # Initialize the StartDetector with the needle image name\n",
     "    detector = StartDetector(needle_img_name)\n",
-    "\n",
-    "    # List all files in the directory\n",
     "    image_files = [f for f in os.listdir(directory_path) if f.endswith(('.png', '.jpg', '.jpeg'))]\n",
     "\n",
-    "    # Iterate over each image file and check for a match\n",
     "    for image_file in image_files:\n",
     "        image_path = os.path.join(directory_path, image_file)\n",
-    "\n",
-    "        # Load the current image\n",
     "        image = cv2.imread(image_path)\n",
     "\n",
     "        if image is None:\n",
     "            print(f\"Could not read image {image_file}, skipping...\")\n",
     "            continue\n",
     "\n",
-    "        # Get the confidence value and location of the best match\n",
     "        confidence, max_loc = detector.detect(image)\n",
+    "        threshold = 0.66  # Adjust threshold based on desired confidence level\n",
     "\n",
-    "        # Define a threshold for detection\n",
-    "        threshold = 0.66\n",
-    "\n",
-    "        # Get dimensions of the needle image (template)\n",
     "        needle_height, needle_width = detector.needle_img_gray.shape[:2]\n",
     "\n",
-    "        # Check if the confidence exceeds the threshold\n",
     "        if confidence >= threshold:\n",
     "            print(f\"Template found in {image_file} with confidence {confidence}\")\n",
     "\n",
-    "            # Draw a rectangle around the detected region\n",
-    "            \"\"\" Commented out for debug purposes:\n",
+    "            # Optional: Draw a rectangle around the detected region\n",
+    "            \"\"\" Uncomment to see the detected region\n",
     "            top_left = max_loc\n",
     "            bottom_right = (top_left[0] + needle_width, top_left[1] + needle_height)\n",
-    "            cv2.rectangle(image, top_left, bottom_right, (0, 255, 0), 3)  # Green rectangle with 3px thickness\n",
+    "            cv2.rectangle(image, top_left, bottom_right, (0, 255, 0), 3)\n",
     "\n",
-    "            # Save the result image with rectangle to the same directory\n",
     "            result_image_path = os.path.join(directory_path, f\"matched_{image_file}\")\n",
     "            cv2.imwrite(result_image_path, image)\n",
     "            \"\"\"\n",
@@ -106,20 +82,104 @@
     "            print(f\"Template not found in {image_file} with confidence {confidence}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    # Path to the directory containing images to test\n",
     "    test_directory = os.path.join(os.getcwd(), 'Start_Testing')\n",
+    "    needle_image = 'needle.png'\n",
+    "    find_matches_in_directory(test_directory, needle_image)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f372a085-cdce-4a6f-a66a-56450af0ffa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Template found in needle.png with PSNR 361.20199909921956\n",
+      "Template not found in Test5.png with PSNR 9.62352774842059\n",
+      "Template not found in Test6.png with PSNR 9.564177771546783\n",
+      "Template not found in Test7.png with PSNR 9.764999028107821\n",
+      "Template not found in Test8.png with PSNR 9.401296869572926\n",
+      "Template not found in Test_1.png with PSNR 9.54643041731597\n",
+      "Template not found in Test_2.png with PSNR 9.582681617901661\n",
+      "Template not found in Test_3.png with PSNR 9.5518741781201\n",
+      "Template not found in Test_4.png with PSNR 9.654886420973925\n",
+      "Template not found in Test_Fail1.png with PSNR 9.827737089339513\n",
+      "Template not found in Test_Fail2.png with PSNR 6.133970156648006\n",
+      "Template not found in Test_Fail3.png with PSNR 7.910955445034748\n",
+      "Template not found in Test_Fail4.png with PSNR 9.452105084821422\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import os\n",
     "\n",
-    "    # Needle image filename\n",
-    "    needle_image = 'needle.png'  # Change this to the correct filename\n",
+    "class StartDetector:\n",
+    "    def __init__(self, needle_img_name):\n",
+    "        script_dir = os.getcwd()\n",
+    "        # Change to use 'Reset_Testing' directory\n",
+    "        self.needle_img_path = os.path.join(script_dir, 'Reset_Testing', needle_img_name)\n",
+    "        self.needle_img = cv2.imread(self.needle_img_path, cv2.IMREAD_UNCHANGED)\n",
+    "        assert self.needle_img is not None, f\"{self.needle_img_path} could not be read, check if it exists\"\n",
     "\n",
-    "    # Run the function to find matches\n",
-    "    find_matches_in_directory(test_directory, needle_image)"
+    "        if self.needle_img.shape[2] == 4:\n",
+    "            self.needle_img = self.needle_img[:, :, :3]\n",
+    "\n",
+    "        self.needle_img_gray = cv2.cvtColor(self.needle_img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    def detect(self, frame):\n",
+    "        frame_gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "        result = cv2.matchTemplate(frame_gray, self.needle_img_gray, cv2.TM_CCOEFF_NORMED)\n",
+    "        min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(result)\n",
+    "        \n",
+    "        return max_val, max_loc  # Returning the confidence value and the location of the best match\n",
+    "\n",
+    "def find_matches_in_directory(directory_path, needle_img_name):\n",
+    "    detector = StartDetector(needle_img_name)\n",
+    "    image_files = [f for f in os.listdir(directory_path) if f.endswith(('.png', '.jpg', '.jpeg'))]\n",
+    "\n",
+    "    for image_file in image_files:\n",
+    "        image_path = os.path.join(directory_path, image_file)\n",
+    "        image = cv2.imread(image_path)\n",
+    "\n",
+    "        if image is None:\n",
+    "            print(f\"Could not read image {image_file}, skipping...\")\n",
+    "            continue\n",
+    "\n",
+    "        confidence, max_loc = detector.detect(image)\n",
+    "        threshold = 0.66  # Adjust threshold based on desired confidence level\n",
+    "\n",
+    "        needle_height, needle_width = detector.needle_img_gray.shape[:2]\n",
+    "\n",
+    "        if confidence >= threshold:\n",
+    "            print(f\"Template found in {image_file} with confidence {confidence}\")\n",
+    "\n",
+    "            # Optional: Draw a rectangle around the detected region\n",
+    "            \"\"\" Uncomment to see the detected region\n",
+    "            top_left = max_loc\n",
+    "            bottom_right = (top_left[0] + needle_width, top_left[1] + needle_height)\n",
+    "            cv2.rectangle(image, top_left, bottom_right, (0, 255, 0), 3)\n",
+    "\n",
+    "            result_image_path = os.path.join(directory_path, f\"matched_{image_file}\")\n",
+    "            cv2.imwrite(result_image_path, image)\n",
+    "            \"\"\"\n",
+    "        else:\n",
+    "            print(f\"Template not found in {image_file} with confidence {confidence}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Use 'Reset_Testing' directory for images to test\n",
+    "    test_directory = os.path.join(os.getcwd(), 'Reset_Testing')\n",
+    "    needle_image = 'needle.png'\n",
+    "    find_matches_in_directory(test_directory, needle_image)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ed74fa-9ecc-4a84-9db7-80264f120ca8",
+   "id": "be10d9e3-f3f2-4422-ae19-40dda5e93796",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -141,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
